--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,14 @@ dependencies {
 	// In other words, Wurst won't compile without this library,
 	// even though it's Minecraft that actually uses it.
 	modImplementation "com.google.code.findbugs:jsr305:3.0.2"
+	
+	// Override vulnerable msal4j dependency until Minecraft updates to a newer version
+	constraints {
+		// v1.15.0, used by Minecraft 1.21.3, is vulnerable to CVE-2024-35255
+		implementation('com.microsoft.azure:msal4j:1.15.1') {
+			force = true
+		}
+	}
 }
 
 loom {
