--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,10 @@ repositories {
 // Override vulnerable dependencies until Minecraft updates to newer versions
 configurations.all {
 	resolutionStrategy {
-		// v2.5.1, used by Minecraft 1.21.4 - 1.21.5, is vulnerable to CVE-2024-57699
+		// v2.5.1, used by Minecraft 1.21.4 - 1.21.7, is vulnerable to CVE-2024-57699
 		force "net.minidev:json-smart:2.5.2"
+		// v2.13.4, used by Minecraft 1.21.4 - 1.21.7, is vulnerable to CVE-2025-52999
+		force "com.fasterxml.jackson.core:jackson-core:2.15.0"
 	}
 }
 
